--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -3,8 +3,8 @@ FROM oven/bun:1.1 AS build
 
 WORKDIR /app
 
-# copia dependências
-COPY package.json bun.lockb ./
+# copia apenas package.json
+COPY package.json ./
 RUN bun install
 
 # copia o resto do código
@@ -17,13 +17,10 @@ RUN bun run build
 # ---------- runtime ----------
 FROM nginx:alpine
 
-# remove config default
 RUN rm /etc/nginx/conf.d/default.conf
 
-# copia build para nginx
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# config simples do nginx para SPA
 RUN printf "server {\n\
   listen 80;\n\
   server_name _;\n\
@@ -35,5 +32,4 @@ RUN printf "server {\n\
 }\n" > /etc/nginx/conf.d/app.conf
 
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
