--- a/apps/package.json
+++ b/apps/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "apps",
+  "name": "santos-tech",
   "private": true,
   "scripts": {
-    "build": "cd web && bun run build && cd ../api",
-    "start": "cd api && bun run start"
+    "build": "cd web && bun install && bun run build",
+    "start": "cd api && bun install && bun run start",
+    "deploy": "bun run build && bun run start"
   }
 }
