--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "bun run src/server.ts"
+    "start": "bun src/server.ts"
   },
   "dependencies": {
     "express": "^5.2.1",
