--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,11 +3,16 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "bun src/server.ts"
+    "start": "bun src/server.ts",
+    "dev": "bun --watch src/server.ts"
   },
   "dependencies": {
     "express": "^5.2.1",
     "cors": "^2.8.5",
     "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/cors": "^2.8.17"
   }
 }
