--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,34 +1,20 @@
-# =========================
-# STAGE 1 - BUILD
-# =========================
-FROM oven/bun:1.1 AS build
+FROM oven/bun:1.1.38 AS build
 
 WORKDIR /app
 
-# Copia apenas o package.json primeiro (cache)
-COPY package.json ./
-
+COPY package.json bun.lock* ./
 RUN bun install
 
-# Copia o resto do projeto
 COPY . .
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
 
-# Build do Vite
 RUN bun run build
 
-
-# =========================
-# STAGE 2 - NGINX
-# =========================
+# Stage 2: Nginx
 FROM nginx:alpine
 
-# Remove config default
-RUN rm /etc/nginx/conf.d/default.conf
-
-# Copia build do Vite
 COPY --from=build /app/dist /usr/share/nginx/html
-
-# Copia config do nginx (opcional, mas recomendado)
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
