Fix: aumentar limite de headers no nginx

--- a/apps/web/nginx.conf
+++ b/apps/web/nginx.conf
@@ -5,6 +5,10 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Aumentar limite de headers e buffers
+    large_client_header_buffers 4 32k;
+    client_header_buffer_size 32k;
+
     # Proxy para a API (redireciona /api/* para o backend)
     location /api/ {
         proxy_pass https://api.santos-tech.com/api/;
