Fix: aumentar limite de headers no nginx

--- a/apps/web/nginx.conf
+++ b/apps/web/nginx.conf
@@ -6,21 +6,10 @@ server {
     index index.html;
 
     # Aumentar limite de headers e buffers
-    large_client_header_buffers 4 32k;
-    client_header_buffer_size 32k;
-
-    # Proxy para a API (redireciona /api/* para o backend)
-    location /api/ {
-        proxy_pass https://api.santos-tech.com/api/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    large_client_header_buffers 8 64k;
+    client_header_buffer_size 64k;
+    client_body_buffer_size 128k;
+    client_max_body_size 10M;
 
     # Configuração para React Router (SPA)
     location / {
