--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,8 +7,9 @@
     "dev": "bun --watch src/server.ts"
   },
   "dependencies": {
-    "express": "^5.2.1",
+    "@types/pg": "^8.16.0",
     "cors": "^2.8.5",
+    "express": "^5.2.1",
     "pg": "^8.16.3"
   },
   "devDependencies": {
